--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Test
       run: |
         curl -sSf https://rye-up.com/get | RYE_INSTALL_OPTION="--yes" bash
-        echo "$HOME/.rye/shims" >> $GITHUB_PATH
+        source "$HOME/.rye/env"
         task ci
