--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "requests>=2.31.0",
     "boto3>=1.34.60",
     "beautifulsoup4>=4.12.3",
+    "pip>=24.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
