--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = [
     { name = "Maximilian Prusch", email = "maximilian.prusch@outlook.com" }
 ]
 dependencies = [
-    "requests>=2.31.0",
     "boto3>=1.34.60",
     "beautifulsoup4>=4.12.3",
     "pip>=24.0",
+    "httpx>=0.27.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -22,11 +22,12 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "pytest>=8.1.1",
-    "responses>=0.25.0",
     "boto3-stubs[ssm,s3]>=1.34.60",
     "moto[ssm,s3]>=5.0.3",
     "ruff>=0.3.3",
     "pip>=24.0",
+    "pytest-httpx>=0.30.0",
+    "pytest-asyncio>=0.23.6",
 ]
 
 [tool.hatch.metadata]
