--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,7 +26,7 @@ tasks:
   zip:
     dir: dist
     cmds:
-      - zip -r festival-scraper.zip .
+      - zip -q -r festival-scraper.zip .
 
   ci:
     deps: [ install ]
