--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -22,6 +22,6 @@ jobs:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Test
       run: |
-        curl -sSf https://rye-up.com/get | RYE_INSTALL_OPTION="--yes" bash
+        curl -sSf https://rye.astral.sh/get | bash
         source "$HOME/.rye/env"
         task ci
