--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "boto3>=1.34.60",
     "beautifulsoup4>=4.12.3",
     "httpx>=0.27.0",
+    "aiometer>=0.5.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
