--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,36 +2,21 @@
 name = "festival-scraper"
 version = "0.1.0"
 description = "Add your description here"
-authors = [
-    { name = "Maximilian Prusch", email = "maximilian.prusch@outlook.com" }
-]
-dependencies = [
-    "boto3>=1.34.60",
-    "beautifulsoup4>=4.12.3",
-    "httpx>=0.27.0",
-    "aiometer>=0.5.0",
-]
 readme = "README.md"
-requires-python = ">= 3.8"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.rye]
-managed = true
-dev-dependencies = [
-    "pytest>=8.1.1",
-    "boto3-stubs[ssm,s3]>=1.34.60",
-    "moto[ssm,s3]>=5.0.3",
-    "ruff>=0.3.3",
-    "pip>=24.0",
-    "pytest-httpx>=0.30.0",
-    "pytest-asyncio>=0.23.6",
+requires-python = ">=3.12.4"
+dependencies = [
+    "aiometer>=0.5.0",
+    "beautifulsoup4>=4.12.3",
+    "boto3>=1.35.68",
+    "httpx>=0.27.2",
 ]
 
-[tool.hatch.metadata]
-allow-direct-references = true
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/festival_scraper"]
+[dependency-groups]
+dev = [
+    "moto>=5.0.21",
+    "pytest-httpx>=0.34.0",
+    "pytest>=8.3.3",
+    "pytest-asyncio>=0.24.0",
+    "boto3-stubs[s3,ssm]>=1.35.68",
+    "ruff>=0.8.0",
+]
