--- a/.github/workflows/test-deploy-master.yml
+++ b/.github/workflows/test-deploy-master.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Test
         run: |
           task ci
+        env:
+          UV_SYSTEM_PYTHON: 1
   deploy:
     needs: test
     runs-on: ubuntu-latest
@@ -48,3 +50,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.LAMBDA_DEPLOY_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.LAMBDA_DEPLOY_ACCESS_KEY_SECRET }}
           AWS_DEFAULT_REGION: eu-west-1
+          UV_SYSTEM_PYTHON: 1
